Fixed collapsing of upcoming events. upcoming events properly adjusts on mobile.

--- a/acm-manager-web-application/app/styles/events-sidebar.css
+++ b/acm-manager-web-application/app/styles/events-sidebar.css
@@ -1,4 +1,4 @@
-.upcoming-events {
+.upcoming-events.upcoming-events-localized {
   z-index: 1;
   
   box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.5);
@@ -13,17 +13,16 @@
 }
 
 @media only screen
-and (min-device-width: 320px) 
-and (max-device-width: 800px) {
-  .upcoming-events__mobile {
-    height: calc(150px + 50%);
+and (max-device-height: 400px) {
+  .upcoming-events-localized {
+    max-height: calc(150px + 25%);
   }
 }
 
 @media only screen
-and (min-device-width: 800px) {
-  .upcoming-events__desktop {
-    height: calc(150px + 25%);
+and (min-device-height: 400px) {
+  .upcoming-events-localized {
+    max-height: calc(125px + 50%);
   }
 }
 
